# SvenEnhancer

./: .gitignore.txt  CMakeLists.txt  CMakeSettings.json  Entity.md  Events.md  MySql.md  OnGameEventsAndTOML.md  README.md  Rest.md  Sq3Kvs.md  Voice.md
Plugins/AsRestrictListPlugins/: README.md  as_restrictplugins.as
Plugins/FixWeaponPositions/: README.md  se_fix_weaponposition.as
Plugins/GameDescription/: README.md  se_gamedescription.as
Plugins/SEUserTag/: README.md  se_usertags.as
Plugins/SEUserTag/config/: se_usertags.toml
Plugins/UserConnectedFrom/: README.md  user_connectedfrom.as
SamplePlugin/: test.as  test2.as  test3.as  test_callback_a.as  test_callback_b.as  test_command.as  test_event.as  test_mysql.as  test_rest.as  test_sqlite.as
SamplePlugin/store/: json_input.json
src/: SvenEnhancer.cpp  angelscript_expansion.cpp  callbackitem.cpp  callbackmethod.cpp  message.cpp  moduledata.cpp  mysql_connection_pool.cpp  mysql_sven.cpp  sqlite3_sven.cpp
src/angelscript/: angelscriptlib.h
src/angelscript/include/: angelscript_addon.h
src/angelscript/source/: angelscript_addon.cpp
src/engine/: dll_hook.cpp  engine_hook.cpp
src/header/: angelscript_expansion.h  callbackitem.h  constants.h  gameevents.h  message.h  mysql_connection_pool.h  mysql_sven.h  sqlite3_sven.h  utilities.h
src/header/stock/: angelscript_helper.h  callbackmethod.h  casbasegcobject.h  casmodule.h  globaltypes.h  jvalue.h  moduledata.h  sefunction.h  sven_enhancer_as.h  svenenhancer.h  tvalue.h  utility.h  vftable.h
src/rest/: base64.h  crypto.cpp  crypto.h  curlfn.cpp  curlfn.h  rest.h  restclient.cpp  restcontext.cpp  restrequest.cpp  restresponse.cpp  restutils.cpp  stringcollection.cpp  stringcollection.h
src/stock/: algescript_helper.cpp  casbasegcobject.cpp  casmodule.cpp  dll_api.cpp  engine_api.cpp  globaltypes.cpp  h_export.cpp  jvalue.cpp  sdk_util.cpp  sven_enhancer_as.cpp  tvalue.cpp  vftable.cpp
